Added some colors and fixed some formatting.

--- a/index.html
+++ b/index.html
@@ -70,58 +70,81 @@
           </section>
 
           <!-- Right: KPI donuts (smaller, fixed-size) -->
-<section class="col-span-12 lg:col-span-4 grid grid-cols-1 gap-3">
-  <div class="rounded-2xl border border-slate-200 bg-white shadow-sm p-3">
-    <h3 class="text-sm font-medium text-slate-600 mb-1">Yield</h3>
-    <div class="flex items-center gap-3">
-      <!-- fixed-size wrapper -->
-      <div class="shrink-0 w-16 h-16">
-        <canvas id="kpiDonut1" class="!w-full !h-full"></canvas>
-      </div>
-      <div class="text-slate-600 text-xs">Good parts / total</div>
-    </div>
-  </div>
+          <section class="col-span-12 lg:col-span-4 grid grid-cols-1 gap-3">
+            <div class="rounded-2xl border border-slate-200 bg-white shadow-sm p-3">
+              <h3 class="text-sm font-medium text-slate-600 mb-1">Yield</h3>
+              <div class="flex items-center gap-3">
+                <div class="shrink-0 w-16 h-16">
+                  <canvas id="kpiDonut1" class="!w-full !h-full"></canvas>
+                </div>
+                <div class="text-slate-600 text-xs">Good parts / total</div>
+              </div>
+            </div>
 
-  <div class="rounded-2xl border border-slate-200 bg-white shadow-sm p-3">
-    <h3 class="text-sm font-medium text-slate-600 mb-1">Scrap Rate</h3>
-    <div class="flex items-center gap-3">
-      <div class="shrink-0 w-16 h-16">
-        <canvas id="kpiDonut2" class="!w-full !h-full"></canvas>
-      </div>
-      <div class="text-slate-600 text-xs">Scrap / input</div>
-    </div>
-  </div>
+            <div class="rounded-2xl border border-slate-200 bg-white shadow-sm p-3">
+              <h3 class="text-sm font-medium text-slate-600 mb-1">Scrap Rate</h3>
+              <div class="flex items-center gap-3">
+                <div class="shrink-0 w-16 h-16">
+                  <canvas id="kpiDonut2" class="!w-full !h-full"></canvas>
+                </div>
+                <div class="text-slate-600 text-xs">Scrap / input</div>
+              </div>
+            </div>
 
-  <div class="rounded-2xl border border-slate-200 bg-white shadow-sm p-3">
-    <h3 class="text-sm font-medium text-slate-600 mb-1">On-Time</h3>
-    <div class="flex items-center gap-3">
-      <div class="shrink-0 w-16 h-16">
-        <canvas id="kpiDonut3" class="!w-full !h-full"></canvas>
-      </div>
-      <div class="text-slate-600 text-xs">Orders on schedule</div>
+            <div class="rounded-2xl border border-slate-200 bg-white shadow-sm p-3">
+              <h3 class="text-sm font-medium text-slate-600 mb-1">On-Time</h3>
+              <div class="flex items-center gap-3">
+                <div class="shrink-0 w-16 h-16">
+                  <canvas id="kpiDonut3" class="!w-full !h-full"></canvas>
+                </div>
+                <div class="text-slate-600 text-xs">Orders on schedule</div>
+              </div>
+            </div>
+          </section>
+
+          <!-- Loss Breakdown (bottom card) -->
+<section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-3 md:p-4 h-[16rem] overflow-hidden">
+  <h3 class="text-lg font-semibold text-slate-800 mb-2">Loss Breakdown by Step</h3>
+
+  <div class="flex items-center justify-center gap-4 md:gap-6">
+    <!-- Vertical legend (tighter) -->
+    <ul class="space-y-1.5 text-sm text-slate-700">
+      <li class="flex items-center">
+        <span class="inline-block h-3 w-3 rounded-full mr-2" style="background:#1F77B4"></span> Cutting
+      </li>
+      <li class="flex items-center">
+        <span class="inline-block h-3 w-3 rounded-full mr-2" style="background:#FF7F0E"></span> Assembly
+      </li>
+      <li class="flex items-center">
+        <span class="inline-block h-3 w-3 rounded-full mr-2" style="background:#2CA02C"></span> QC
+      </li>
+      <li class="flex items-center">
+        <span class="inline-block h-3 w-3 rounded-full mr-2" style="background:#9467BD"></span> Packaging
+      </li>
+    </ul>
+
+    <!-- Smaller donut box -->
+    <div class="w-[200px] h-[200px]">
+      <canvas id="multiRingDonut" class="!w-full !h-full"></canvas>
     </div>
   </div>
 </section>
-
-          <!-- Multi-ring donut -->
-          <section class="col-span-12 rounded-2xl border border-slate-200 bg-white shadow-sm p-4 h-[18rem]">
-            <h3 class="text-lg font-semibold text-slate-800 mb-2">Loss Breakdown by Step</h3>
-            <canvas id="multiRingDonut" class="w-full h-full"></canvas>
-          </section>
         </div>
       </div>
     </main>
   </div>
 
-  <!-- Chart.js (single include) -->
+  <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js"></script>
 
   <script>
-    // ---- Brand colors ----
-    const PB_BLUE   = '#0B1F52';
-    const PB_GRAY_D = '#434A52';
-    const PB_GRAY_M = '#7C8390';
-    const PB_GRAY_L = '#CFD3DA';
+    // ---- Brand + status colors ----
+    const PB_BLUE     = '#0B1F52';
+    const PB_GRAY_D   = '#434A52';
+    const PB_GRAY_M   = '#7C8390';
+    const PB_GRAY_L   = '#CFD3DA';
+    const STATUS_GREEN  = '#2BAF6A'; // past
+    const STATUS_YELLOW = '#F4B000'; // current
 
     // ---- Chart.js defaults ----
     Chart.defaults.font.family = 'Inter, system-ui, -apple-system, Segoe UI, Roboto, sans-serif';
@@ -129,13 +152,23 @@
     Chart.defaults.plugins.legend.display = false;
 
     // Canvases
-    const lineCtx = document.getElementById('lossLineChart');
-    const kpi1Ctx = document.getElementById('kpiDonut1');
-    const kpi2Ctx = document.getElementById('kpiDonut2');
-    const kpi3Ctx = document.getElementById('kpiDonut3');
+    const lineCtx  = document.getElementById('lossLineChart');
+    const kpi1Ctx  = document.getElementById('kpiDonut1');
+    const kpi2Ctx  = document.getElementById('kpiDonut2');
+    const kpi3Ctx  = document.getElementById('kpiDonut3');
     const multiCtx = document.getElementById('multiRingDonut');
 
-    // Line chart
+    // ----- Line chart with status-colored segments & points -----
+    // statuses array is set in updateDashboard()
+    let statuses = [];
+
+    function colorFor(idx) {
+      const s = statuses[idx];
+      if (s === 'past')    return STATUS_GREEN;
+      if (s === 'current') return STATUS_YELLOW;
+      return PB_BLUE; // future/default
+    }
+
     const lossLineChart = new Chart(lineCtx, {
       type: 'line',
       data: {
@@ -143,9 +176,13 @@
         datasets: [{
           label: 'Loss (kg)',
           data: [],
-          borderColor: PB_BLUE,
-          backgroundColor: PB_BLUE + '22',
-          pointBackgroundColor: PB_BLUE,
+          // line & fill
+          segment: {
+            borderColor: (ctx) => colorFor(ctx.p0DataIndex),
+          },
+          backgroundColor: PB_GRAY_L + '55', // subtle constant fill
+          // points
+          pointBackgroundColor: (ctx) => colorFor(ctx.dataIndex),
           pointRadius: 4,
           pointHoverRadius: 6,
           tension: 0.3,
@@ -162,7 +199,7 @@
       }
     });
 
-    // Donut helper
+    // ----- Donut helper -----
     function makeDonut(ctx, pct, color = PB_BLUE) {
       return new Chart(ctx, {
         type: 'doughnut',
@@ -176,36 +213,85 @@
           }]
         },
         options: {
-            responsive: true,
-            maintainAspectRatio: false,   // <-- key for small fixed boxes
-            plugins: {
-                legend: { display: false },
-                tooltip: { enabled: false }
-            },
+          responsive: true,
+          maintainAspectRatio: false,
+          plugins: { legend: { display: false }, tooltip: { enabled: false } }
         }
       });
     }
 
-    const kpiYield  = makeDonut(kpi1Ctx, 0);
-    const kpiScrap  = makeDonut(kpi2Ctx, 0, PB_GRAY_M);
-    const kpiOnTime = makeDonut(kpi3Ctx, 0);
+    const kpiYield  = makeDonut(kpi1Ctx, 0, '#0B1F52');  // or STATUS_GREEN if you want
+const kpiScrap  = makeDonut(kpi2Ctx, 0, '#94A0B8');  // QC-ish gray-blue
+const kpiOnTime = makeDonut(kpi3Ctx, 0, '#2BAF6A'); 
+ // green like “past” status
 
-    // Multi-ring donut example
-    const multi = new Chart(multiCtx, {
-      type: 'doughnut',
-      data: {
-        labels: ['Cutting','Assembly','QC','Packaging'],
-        datasets: [
-          { data: [90,10,0,0], backgroundColor: [PB_BLUE, PB_GRAY_L, PB_GRAY_L, PB_GRAY_L], borderWidth: 0, cutout: '60%' },
-          { data: [0,80,20,0], backgroundColor: [PB_GRAY_L, PB_BLUE, PB_GRAY_L, PB_GRAY_L], borderWidth: 0, cutout: '75%' },
-          { data: [0,0,70,30], backgroundColor: [PB_GRAY_L, PB_GRAY_L, PB_BLUE, PB_GRAY_M], borderWidth: 0, cutout: '85%' }
-        ]
+    const COLOR_CUT = '#0B1F52'; // Cutting (brand blue)
+const COLOR_ASM = '#475569'; // Assembly (slate-600)
+const COLOR_QC  = '#94A3B8'; // QC (slate-400)
+const COLOR_PKG = '#CBD5E1'; // Packaging (slate-300)
+
+// Distinct categorical colors (common in charts)
+const CUT = '#1F77B4'; // blue
+const ASM = '#FF7F0E'; // orange
+const QC  = '#2CA02C'; // green
+const PKG = '#9467BD'; // purple
+const BG  = '#EEF2F6'; // neutral filler for “other” segments
+
+
+// Helper to build equal-width rings (percent strings)
+const THICK = 10;   // each ring width ≈ 10% of radius
+function band(innerPct) {
+  // innerPct is 0-100; returns {cutout, radius} as percent strings
+  return { cutout: `${innerPct}%`, radius: `${innerPct + THICK}%` };
+}
+
+const b1 = band(70); // inner ring: 70–80%
+const b2 = band(80); // middle:     80–90%
+const b3 = band(90); // outer:      90–100% (we’ll pull it in a bit)
+
+new Chart(multiCtx, {
+  type: 'doughnut',
+  data: {
+    labels: ['Cutting','Assembly','QC','Packaging'],
+    datasets: [
+      { // inner = Cutting
+        data: [90,10,0,0],
+        backgroundColor: [CUT, BG, BG, BG],
+        borderColor: '#fff', borderWidth: 0,
+        cutout: b1.cutout, radius: b1.radius
       },
-      options: { responsive: true, maintainAspectRatio: false, plugins: { legend: { display: true } } }
-    });
+      { // middle = Assembly
+        data: [0,80,20,0],
+        backgroundColor: [BG, ASM, BG, BG],
+        borderColor: '#fff', borderWidth: 0,
+        cutout: b2.cutout, radius: b2.radius
+      },
+      { // outer = QC + Packaging
+        data: [0,0,70,30],
+        backgroundColor: [BG, BG, QC, PKG],
+        borderColor: '#fff', borderWidth: 0,
+        // pull in slightly so it never touches the card edge
+        cutout: b3.cutout, radius: '98%'
+      }
+    ]
+  },
+  options: {
+    responsive: true,
+    maintainAspectRatio: false,
+    rotation: -90 * (Math.PI/180),
+    plugins: { legend: { display: false }, tooltip: { enabled: false } }
+  }
+});
 
-    // Single entry point to update charts
+    // ----- Single entry point to update charts -----
+    // data = {
+    //   times: [...],
+    //   lossKg: [...],
+    //   statuses: ['past'|'current'|'future', ...],
+    //   kpis: { yieldPct, scrapPct, onTimePct }
+    // }
     function updateDashboard(data) {
+      statuses = data.statuses || [];
       lossLineChart.data.labels = data.times || [];
       lossLineChart.data.datasets[0].data = data.lossKg || [];
       lossLineChart.update();
@@ -215,14 +301,13 @@
       kpiOnTime.data.datasets[0].data = [data.kpis.onTimePct, 100 - data.kpis.onTimePct]; kpiOnTime.update();
     }
 
-    // Demo data
+    // ---- Demo data to show the status colors immediately ----
     updateDashboard({
       times:  ['08:00','09:00','10:00','11:00','12:00','13:00','14:00','15:00'],
       lossKg: [12, 9, 11, 15, 13, 18, 16, 14],
+      statuses: ['past','past','past','current','future','future','future','future'],
       kpis:   { yieldPct: 86, scrapPct: 14, onTimePct: 92 }
     });
-
-    // Later: updateDashboard(realData)
   </script>
 </body>
 </html>
